--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li>best rapper alive</li>
                 </ul>
             </div>
-            <div class="img-div"><img style="height:275px;" src="wayne.png" alt="Lil Wayne in a grey hoodie pointing finger guns"></div>
+            <div class="img-div"><img style="height:275px;" src="/images/wayne.png" alt="Lil Wayne in a grey hoodie pointing finger guns"></div>
         </div>
         <div class="tribute-info">
            <img style="height:100%; width: 100%;" src="cloud.png" alt="A black vector cloud">
@@ -60,7 +60,7 @@
                 <div id="tribute-link"><a href="
                     https://www.instagram.com/liltunechi/" target="_blank">INSTAGRAM</a></div>
                 </div>
-        <div class="img-foot"><img style="height:275px;" src="waynee.png" alt="Lil Wayne in a white teeshirt and hat with long hair. He is sticking his tongue out and pointing his thumb to the side."></div>
+        <div class="img-foot"><img style="height:275px;" src="/images/waynee.png" alt="Lil Wayne in a white teeshirt and hat with long hair. He is sticking his tongue out and pointing his thumb to the side."></div>
     </div>
     </div>
 </body>
