--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="img-div"><img style="height:275px;" src="/images/wayne.png" alt="Lil Wayne in a grey hoodie pointing finger guns"></div>
         </div>
         <div class="tribute-info">
-           <img style="height:100%; width: 100%;" src="cloud.png" alt="A black vector cloud">
+           <img style="height:100%; width: 100%;" src="/images/cloud.png" alt="A black vector cloud">
            <div class="info"><p>Join us on this virtual journey into Lil Wayne's discography, his influence on the music industry, and his journey from a young aspiring artist to a hip-hop icon. It's the world of Lil Wayne - BUY TICKETS </p></div>
            </div>
          </div>
