--- a/index.html
+++ b/index.html
@@ -23,26 +23,27 @@
                     <li>best rapper alive</li>
                 </ul>
             </div>
-            <div class="img-div"><img style="height:275px;" src="/images/wayne.png" alt="Lil Wayne in a grey hoodie pointing finger guns"></div>
+            <div class="img-div"><img style="height:275px;" src="images/wayne.png" alt="Lil Wayne in a grey hoodie pointing finger guns"></div>
         </div>
         <div class="tribute-info">
-           <img style="height:100%; width: 100%;" src="/images/cloud.png" alt="A black vector cloud">
+           <img style="height:100%; width: 100%;" src="images/cloud.png" alt="A black vector cloud">
            <div class="info"><p>Join us on this virtual journey into Lil Wayne's discography, his influence on the music industry, and his journey from a young aspiring artist to a hip-hop icon. It's the world of Lil Wayne! </p></div>
            </div>
          </div>
         </div>
         <div class="albums">
             <h2>DISCOGRAPHY</h2>
+            <h5>by sales</h5>
             <div class="three">
-                <div class="by"><img src="/images/CarterIII.jpeg"></div>
-                <div class="by"><img src="/images/CarterIV.jpeg"></div>
-                <div class="by"><img src="/images/IANAHBII.jpeg"></div>
-                <div class="by"><img src="/images/CarterV.jpeg"></div>
-                <div class="by"><img src="/images/CarterII.jpeg"></div>
-                <div class="by"><img src="/images/IANAHB.jpeg"></div>
-                <div class="by"><img src="/images/Carter.jpeg"></div>
-                <div class="by"><img src="/images/Rebirth.jpeg"></div>
-                <div class="by"><img src="/images/Blockishot.jpeg"></div>
+                <div class="by"><img src="images/CarterIII.jpeg"></div>
+                <div class="by"><img src="images/CarterIV.jpeg"></div>
+                <div class="by"><img src="images/IANAHBII.jpeg"></div>
+                <div class="by"><img src="images/CarterV.jpeg"></div>
+                <div class="by"><img src="images/CarterII.jpeg"></div>
+                <div class="by"><img src="images/IANAHB.jpeg"></div>
+                <div class="by"><img src="images/Carter.jpeg"></div>
+                <div class="by"><img src="images/Rebirth.jpeg"></div>
+                <div class="by"><img src="images/Blockishot.jpeg"></div>
               
             </div>
         </div>
@@ -60,7 +61,7 @@
                 <a href="https://www.lilwayneofficial.com/" target="_blank">WEBSITE</a>
                 <a href="https://www.instagram.com/liltunechi/" target="_blank">INSTAGRAM</a>
                 </div>
-                <div class="img-foot"><img style="height:250px;" src="/images/waynee.png" alt="Lil Wayne in a white teeshirt and hat with long hair. He is sticking his tongue out and pointing his thumb to the side."></div>
+                <div class="img-foot"><img style="height:250px;" src="images/waynee.png" alt="Lil Wayne in a white teeshirt and hat with long hair. He is sticking his tongue out and pointing his thumb to the side."></div>
     </div>
     </div>
     
